starts to add smirk bootstrapper

--- a/examples/node-web/views/layout.hbs
+++ b/examples/node-web/views/layout.hbs
@@ -36,7 +36,15 @@
               <ul class="dropdown-menu hilary-sammy" role="menu">
                   <li><a href="/sammy_hilary">About</a></li>
               </ul>
-            </li>              
+            </li>
+<!--
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">gidget+hilary+Simrou<span class="caret"></span></a>
+              <ul class="dropdown-menu hilary-simrou" role="menu">
+                  <li><a href="/simrou_hilary">About</a></li>
+              </ul>
+            </li>
+-->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
