getting node and sammy ready

--- a/examples/node-example/views/index.hbs
+++ b/examples/node-example/views/index.hbs
@@ -1,3 +1,10 @@
+<nav>
+    <a href="/">home</a> |
+    <a href="/example1">example 1</a> |
+    <a href="/example2">example 2</a> |
+    <a href="/breweries/straub">Straub Brewery</a> |
+    <a href="/breweries/straub/beers/amber">Straub Amber</a>
+</nav>
 <main id="main">
     <!-- ko if: viewModel() -->
     <div data-bind="template: { name: viewModel().template, data: viewModel, afterRender: afterRender }">
