--- a/examples/node-example/views/layout.hbs
+++ b/examples/node-example/views/layout.hbs
@@ -16,6 +16,8 @@
 
     {{> empty}}
     {{> error404}}
+    {{> beer}}
+    {{> brewery}}
 
     <!-- Lib CDN's-->
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js"></script>
@@ -32,6 +34,7 @@
     <script src="/scripts/src/ExceptionHandler.js"></script>
     <script src="/scripts/src/ViewEngine.js"></script>
     <script src="/scripts/src/controllers/homeController.js"></script>
+    <script src="/scripts/src/controllers/breweriesController.js"></script>
     <script src="/scripts/src/startup.js"></script>
 
     </script>
