--- a/examples/node-example/views/index.hbs
+++ b/examples/node-example/views/index.hbs
@@ -3,7 +3,8 @@
     <a href="/example1">example 1</a> |
     <a href="/example2">example 2</a> |
     <a href="/breweries/straub">Straub Brewery</a> |
-    <a href="/breweries/straub/beers/amber">Straub Amber</a>
+    <a href="/breweries/straub/beers/amber">Straub Amber</a> |
+    <a href="/404">example 404</a>
 </nav>
 <main id="main">
     <!-- ko if: viewModel() -->
