changes response to request

--- a/examples/node-example/views/index.hbs
+++ b/examples/node-example/views/index.hbs
@@ -4,6 +4,9 @@
     <a href="/example2">example 2</a> |
     <a href="/breweries/straub">Straub Brewery</a> |
     <a href="/breweries/straub/beers/amber">Straub Amber</a> |
+    <a href="/breweries/straub/beers/amber?s=ambers">Query String</a> |
+    <a href="/breweries/straub/beers/amber?s=ambers#heading">Query String and Hash</a> |
+    <a href="/breweries/straub/beers/amber#heading">Hash</a> |
     <a href="/404">example 404</a>
 </nav>
 <main id="main">
