--- a/examples/node-example/views/index.hbs
+++ b/examples/node-example/views/index.hbs
@@ -7,7 +7,10 @@
     <a href="/breweries/straub/beers/lager?s=ambers">Query String</a> |
     <a href="/breweries/straub/beers/light?s=ambers#heading">Query String and Hash</a> |
     <a href="/breweries/straub/beers/GoundHogAltbier#heading">Hash</a> |
-    <a href="/404">example 404</a>
+    <a href="/404">example 404</a> |
+    <a href="javascript:void(0)">javascript: void</a> |
+    <a>missing href</a> |
+    <a href="http://google.com" target="_blank">blank target</a>
 </nav>
 <main id="main">
     <!-- ko if: viewModel() -->
