breaking change: async routeEngine verbs closes #12

--- a/examples/node-example/views/index.hbs
+++ b/examples/node-example/views/index.hbs
@@ -10,7 +10,9 @@
     <a href="/404">example 404</a> |
     <a href="javascript:void(0)">javascript: void</a> |
     <a>missing href</a> |
-    <a href="http://google.com" target="_blank">blank target</a>
+    <a href="http://google.com" target="_blank">blank target</a> |
+    <a href="http://google.com" target="_self">self target</a> |
+    <a href="/example/immediate/navigate">immediate redirect</a>
 </nav>
 <main id="main">
     <!-- ko if: viewModel() -->
